--- a/ThinkWhat/Modules/Controllers/Authorization/Log in/LoginView.xib
+++ b/ThinkWhat/Modules/Controllers/Authorization/Log in/LoginView.xib
@@ -21,9 +21,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginView" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="3rP-2I-F1E"/>
+                <outlet property="forgotLabel" destination="yRD-dw-IXl" id="b61-7b-4Lq"/>
                 <outlet property="loginButton" destination="yZS-yM-PEY" id="9kd-m2-Rte"/>
                 <outlet property="loginTF" destination="pm5-eI-ALQ" id="EhH-Sv-q44"/>
                 <outlet property="passwordTF" destination="bSt-qU-Pcz" id="TM2-HV-zXW"/>
+                <outlet property="recoverButton" destination="Dsb-2n-N7W" id="9Lo-zF-56W"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -104,6 +106,34 @@
                         <constraint firstItem="hkX-Nb-VOS" firstAttribute="centerX" secondItem="AJu-Az-hK4" secondAttribute="centerX" id="bUh-CZ-upf"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLo-ad-K3X">
+                    <rect key="frame" x="0.0" y="598" width="414" height="264"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Забыли логин или пароль?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yRD-dw-IXl">
+                            <rect key="frame" x="95" y="108.5" width="224.5" height="23.5"/>
+                            <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="17"/>
+                            <color key="textColor" systemColor="systemGrayColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dsb-2n-N7W">
+                            <rect key="frame" x="141.5" y="132" width="131" height="36"/>
+                            <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="17"/>
+                            <color key="tintColor" systemColor="linkColor"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="Восстановиfть"/>
+                            <connections>
+                                <action selector="recoverTapped:" destination="-1" eventType="touchUpInside" id="02e-bp-AEb"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="Dsb-2n-N7W" firstAttribute="centerX" secondItem="MLo-ad-K3X" secondAttribute="centerX" id="2ey-hY-MBY"/>
+                        <constraint firstItem="Dsb-2n-N7W" firstAttribute="top" secondItem="yRD-dw-IXl" secondAttribute="bottom" id="Jw1-ks-YaZ"/>
+                        <constraint firstItem="yRD-dw-IXl" firstAttribute="centerX" secondItem="MLo-ad-K3X" secondAttribute="centerX" id="MFQ-f4-Dag"/>
+                        <constraint firstItem="Dsb-2n-N7W" firstAttribute="top" secondItem="MLo-ad-K3X" secondAttribute="centerY" id="rLe-gj-f44"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -115,30 +145,40 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="AJu-Az-hK4" secondAttribute="trailing" id="KtV-fG-vct"/>
                 <constraint firstItem="AJu-Az-hK4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Lvo-j8-b3Q"/>
                 <constraint firstItem="saq-C6-t8r" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="NRM-9i-Dog"/>
+                <constraint firstItem="MLo-ad-K3X" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="WVR-Wa-qhE"/>
                 <constraint firstItem="saq-C6-t8r" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.15" id="ar3-uC-8BG"/>
                 <constraint firstItem="yZS-yM-PEY" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="ewn-T5-bcJ"/>
                 <constraint firstItem="saq-C6-t8r" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="gTb-W4-2PK"/>
+                <constraint firstItem="MLo-ad-K3X" firstAttribute="top" secondItem="yZS-yM-PEY" secondAttribute="bottom" id="gxZ-E4-YSa"/>
+                <constraint firstItem="MLo-ad-K3X" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="pcU-af-fLU"/>
                 <constraint firstItem="yZS-yM-PEY" firstAttribute="width" secondItem="saq-C6-t8r" secondAttribute="width" multiplier="0.8" id="pqS-xz-fA3"/>
                 <constraint firstItem="hkX-Nb-VOS" firstAttribute="width" secondItem="saq-C6-t8r" secondAttribute="width" multiplier="0.827586" id="qci-Nq-CFr"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="MLo-ad-K3X" secondAttribute="trailing" id="vUu-nH-JdL"/>
                 <constraint firstItem="AJu-Az-hK4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="wkt-il-oxs"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="82"/>
+            <point key="canvasLocation" x="137.68115942028987" y="81.696428571428569"/>
         </view>
     </objects>
     <designables>
         <designable name="bSt-qU-Pcz">
-            <size key="intrinsicContentSize" width="70" height="26"/>
+            <size key="intrinsicContentSize" width="102" height="26"/>
         </designable>
         <designable name="pm5-eI-ALQ">
-            <size key="intrinsicContentSize" width="57.5" height="27.5"/>
+            <size key="intrinsicContentSize" width="89.5" height="27.5"/>
         </designable>
     </designables>
     <resources>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
