--- a/ThinkWhat/Supporting Files/UI/Storyboards/Auth.storyboard
+++ b/ThinkWhat/Supporting Files/UI/Storyboards/Auth.storyboard
@@ -1042,7 +1042,7 @@
     </designables>
     <inferredMetricsTieBreakers>
         <segue reference="Vze-cD-6tx"/>
-        <segue reference="SV6-dd-Kbm"/>
+        <segue reference="hT0-PF-8mW"/>
         <segue reference="oO1-ii-gCi"/>
         <segue reference="DXW-pt-dWO"/>
     </inferredMetricsTieBreakers>
