--- a/ThinkWhat/Modules/Controllers/Authorization/Log in/LoginView.xib
+++ b/ThinkWhat/Modules/Controllers/Authorization/Log in/LoginView.xib
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
@@ -23,9 +21,9 @@
                 <outlet property="contentView" destination="iN0-l3-epB" id="3rP-2I-F1E"/>
                 <outlet property="forgotLabel" destination="yRD-dw-IXl" id="b61-7b-4Lq"/>
                 <outlet property="loginButton" destination="yZS-yM-PEY" id="9kd-m2-Rte"/>
-                <outlet property="loginTF" destination="pm5-eI-ALQ" id="EhH-Sv-q44"/>
                 <outlet property="passwordTF" destination="bSt-qU-Pcz" id="TM2-HV-zXW"/>
                 <outlet property="recoverButton" destination="Dsb-2n-N7W" id="9Lo-zF-56W"/>
+                <outlet property="usernameTF" destination="pm5-eI-ALQ" id="EhH-Sv-q44"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -34,7 +32,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="saq-C6-t8r">
-                    <rect key="frame" x="62" y="386" width="290" height="134"/>
+                    <rect key="frame" x="62" y="381" width="290" height="134"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Логин" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pm5-eI-ALQ" customClass="UnderlinedSignTextField" customModule="ThinkWhat" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="290" height="63"/>
@@ -79,7 +77,7 @@
                     </subviews>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yZS-yM-PEY">
-                    <rect key="frame" x="91" y="540" width="232" height="58"/>
+                    <rect key="frame" x="91" y="535" width="232" height="58"/>
                     <color key="backgroundColor" systemColor="systemBlueColor"/>
                     <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="20"/>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -90,10 +88,10 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AJu-Az-hK4">
-                    <rect key="frame" x="0.0" y="44" width="414" height="342"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="381"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hkX-Nb-VOS">
-                            <rect key="frame" x="87" y="51" width="240" height="240"/>
+                            <rect key="frame" x="87" y="70.5" width="240" height="240"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="hkX-Nb-VOS" secondAttribute="height" multiplier="1:1" id="e3S-Fp-RPB"/>
@@ -107,16 +105,16 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLo-ad-K3X">
-                    <rect key="frame" x="0.0" y="598" width="414" height="264"/>
+                    <rect key="frame" x="0.0" y="593" width="414" height="303"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Забыли логин или пароль?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yRD-dw-IXl">
-                            <rect key="frame" x="95" y="108.5" width="224.5" height="23.5"/>
+                            <rect key="frame" x="99" y="131.5" width="216.5" height="20"/>
                             <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="17"/>
                             <color key="textColor" systemColor="systemGrayColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dsb-2n-N7W">
-                            <rect key="frame" x="141.5" y="132" width="131" height="36"/>
+                            <rect key="frame" x="148.5" y="151.5" width="117" height="32"/>
                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="17"/>
                             <color key="tintColor" systemColor="linkColor"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -159,14 +157,6 @@
             <point key="canvasLocation" x="137.68115942028987" y="81.696428571428569"/>
         </view>
     </objects>
-    <designables>
-        <designable name="bSt-qU-Pcz">
-            <size key="intrinsicContentSize" width="102" height="26"/>
-        </designable>
-        <designable name="pm5-eI-ALQ">
-            <size key="intrinsicContentSize" width="89.5" height="27.5"/>
-        </designable>
-    </designables>
     <resources>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
