--- a/ThinkWhat/Modules/Controllers/Authorization/Agreement/AgreementView.xib
+++ b/ThinkWhat/Modules/Controllers/Authorization/Agreement/AgreementView.xib
@@ -39,7 +39,7 @@
                 </button>
                 <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Cx-Za-DXN">
                     <rect key="frame" x="20" y="44" width="374" height="744"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <wkWebViewConfiguration key="configuration">
                         <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                         <wkPreferences key="preferences"/>
