--- a/ThinkWhat/Modules/Controllers/Authorization/Profile/FillUserView.xib
+++ b/ThinkWhat/Modules/Controllers/Authorization/Profile/FillUserView.xib
@@ -283,6 +283,9 @@
                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" title="Принимаю"/>
+                                    <connections>
+                                        <action selector="continueTapped:" destination="-1" eventType="touchUpInside" id="kcC-nc-OCZ"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -330,19 +333,16 @@
     </objects>
     <designables>
         <designable name="9o5-6U-WB9">
-            <size key="intrinsicContentSize" width="39" height="27.5"/>
-        </designable>
-        <designable name="qjX-ej-Nes">
-            <size key="intrinsicContentSize" width="54.5" height="27.5"/>
+            <size key="intrinsicContentSize" width="71" height="27.5"/>
         </designable>
         <designable name="tUm-df-qeP">
-            <size key="intrinsicContentSize" width="149.5" height="27.5"/>
+            <size key="intrinsicContentSize" width="181.5" height="27.5"/>
         </designable>
         <designable name="wIW-Cz-gTQ">
             <size key="intrinsicContentSize" width="85.5" height="27.5"/>
         </designable>
         <designable name="yfn-rW-uv6">
-            <size key="intrinsicContentSize" width="141" height="27.5"/>
+            <size key="intrinsicContentSize" width="173" height="27.5"/>
         </designable>
     </designables>
     <resources>
