--- a/ThinkWhat/Supporting Files/UI/Banner/SideApp/SideApp.xib
+++ b/ThinkWhat/Supporting Files/UI/Banner/SideApp/SideApp.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -20,88 +19,98 @@
                 <outlet property="contentView" destination="rwK-Cz-6AO" id="zwl-rC-AbY"/>
                 <outlet property="defaultSwitch" destination="g34-uo-fYc" id="r4H-4w-fPq"/>
                 <outlet property="icon" destination="e6o-Xm-dVA" id="1f7-xe-x9S"/>
+                <outlet property="label" destination="dL7-NL-jah" id="GhW-Z5-v3U"/>
                 <outlet property="openButton" destination="IMP-lh-sOt" id="cXr-RX-LCw"/>
                 <outlet property="playButton" destination="BCB-Pp-tiK" id="Qwa-7n-Bx5"/>
                 <outlet property="topView" destination="TwX-CX-YvI" id="8a5-Eq-YPt"/>
-                <outlet property="valueChanged" destination="TwX-CX-YvI" id="niP-Uu-LFA"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="rwK-Cz-6AO">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TwX-CX-YvI">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6o-Xm-dVA">
-                            <rect key="frame" x="4" y="33" width="54" height="54"/>
+                            <rect key="frame" x="0.0" y="33" width="54" height="54"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="e6o-Xm-dVA" secondAttribute="height" multiplier="1:1" id="0OV-ay-4lJ"/>
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="CCB-87-rH8">
-                            <rect key="frame" x="62" y="8" width="230" height="104"/>
+                            <rect key="frame" x="62" y="2" width="238" height="116"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCB-Pp-tiK">
-                                    <rect key="frame" x="0.0" y="0.0" width="145" height="34.5"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCB-Pp-tiK">
+                                    <rect key="frame" x="0.0" y="0.0" width="145" height="38.5"/>
                                     <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
-                                    <state key="normal" title="Воспроизвести здесь"/>
+                                    <state key="normal" title="Воспроизвести здесь">
+                                        <color key="titleColor" systemColor="systemBlueColor"/>
+                                    </state>
                                     <connections>
                                         <action selector="playEmbedded:" destination="-1" eventType="touchUpInside" id="5dp-JI-4VT"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IMP-lh-sOt">
-                                    <rect key="frame" x="0.0" y="34.5" width="219" height="35"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IMP-lh-sOt">
+                                    <rect key="frame" x="0.0" y="38.5" width="219" height="39"/>
                                     <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
-                                    <state key="normal" title="Открыть в приложении Youtube"/>
+                                    <state key="normal" title="Открыть в приложении Youtube">
+                                        <color key="titleColor" systemColor="systemBlueColor"/>
+                                    </state>
                                     <connections>
                                         <action selector="openYoutubeApp:" destination="-1" eventType="touchUpInside" id="pyE-hG-12w"/>
                                     </connections>
                                 </button>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="iwV-ub-H30">
-                                    <rect key="frame" x="0.0" y="69.5" width="133" height="34.5"/>
+                                    <rect key="frame" x="0.0" y="77.5" width="133" height="38.5"/>
                                     <subviews>
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="g34-uo-fYc">
-                                            <rect key="frame" x="0.0" y="0.0" width="51" height="34.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="51" height="38.5"/>
                                             <connections>
-                                                <action selector="setDefault:" destination="-1" eventType="valueChanged" id="ul5-Lt-wGh"/>
+                                                <action selector="onChange:" destination="-1" eventType="valueChanged" id="DDM-wS-d2R"/>
                                             </connections>
                                         </switch>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Запомнить" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dL7-NL-jah">
-                                            <rect key="frame" x="57" y="0.0" width="76" height="34.5"/>
+                                            <rect key="frame" x="57" y="0.0" width="76" height="38.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </stackView>
                             </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="TwX-CX-YvI" secondAttribute="height" multiplier="100:40" id="2bw-FK-5uv"/>
-                        <constraint firstItem="CCB-87-rH8" firstAttribute="top" secondItem="TwX-CX-YvI" secondAttribute="top" constant="8" id="3Op-Q5-LBQ"/>
+                        <constraint firstItem="CCB-87-rH8" firstAttribute="top" secondItem="TwX-CX-YvI" secondAttribute="top" constant="2" id="3Op-Q5-LBQ"/>
                         <constraint firstItem="e6o-Xm-dVA" firstAttribute="height" secondItem="TwX-CX-YvI" secondAttribute="height" multiplier="0.45" id="4Cd-Tc-wgd"/>
                         <constraint firstItem="e6o-Xm-dVA" firstAttribute="centerY" secondItem="TwX-CX-YvI" secondAttribute="centerY" id="Frp-1d-4R5"/>
-                        <constraint firstItem="CCB-87-rH8" firstAttribute="leading" secondItem="e6o-Xm-dVA" secondAttribute="trailing" constant="4" id="SN6-gI-aOk"/>
-                        <constraint firstAttribute="bottom" secondItem="CCB-87-rH8" secondAttribute="bottom" constant="8" id="TLu-Le-HIV"/>
-                        <constraint firstAttribute="trailing" secondItem="CCB-87-rH8" secondAttribute="trailing" constant="8" id="mZt-9u-5Dg"/>
-                        <constraint firstItem="e6o-Xm-dVA" firstAttribute="leading" secondItem="TwX-CX-YvI" secondAttribute="leading" constant="4" id="vi2-uu-UeI"/>
+                        <constraint firstItem="CCB-87-rH8" firstAttribute="leading" secondItem="e6o-Xm-dVA" secondAttribute="trailing" constant="8" id="SN6-gI-aOk"/>
+                        <constraint firstAttribute="bottom" secondItem="CCB-87-rH8" secondAttribute="bottom" constant="2" id="TLu-Le-HIV"/>
+                        <constraint firstAttribute="trailing" secondItem="CCB-87-rH8" secondAttribute="trailing" id="mZt-9u-5Dg"/>
+                        <constraint firstItem="e6o-Xm-dVA" firstAttribute="leading" secondItem="TwX-CX-YvI" secondAttribute="leading" id="vi2-uu-UeI"/>
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="amy-O3-CCm"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="TwX-CX-YvI" firstAttribute="centerY" secondItem="amy-O3-CCm" secondAttribute="centerY" id="2m5-jv-TIw"/>
                 <constraint firstItem="TwX-CX-YvI" firstAttribute="centerX" secondItem="rwK-Cz-6AO" secondAttribute="centerX" id="CCk-Rk-7vj"/>
                 <constraint firstItem="TwX-CX-YvI" firstAttribute="width" secondItem="rwK-Cz-6AO" secondAttribute="width" id="Gid-oc-EBk"/>
-                <constraint firstItem="TwX-CX-YvI" firstAttribute="top" secondItem="rwK-Cz-6AO" secondAttribute="top" id="PIA-W7-Bt9"/>
+                <constraint firstItem="TwX-CX-YvI" firstAttribute="centerX" secondItem="amy-O3-CCm" secondAttribute="centerX" id="IkF-eL-5em"/>
+                <constraint firstItem="TwX-CX-YvI" firstAttribute="height" secondItem="rwK-Cz-6AO" secondAttribute="height" id="rRJ-xS-six"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="amy-O3-CCm"/>
             <point key="canvasLocation" x="-46.399999999999999" y="-79.160419790104953"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
